--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.1",
     "morgan": "^1.9.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-dropzone": "^4.2.1",
+    "sha1": "^1.1.1"
   }
 }
