--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.14",
+    "react-slick": "^0.15.4",
     "react-tap-event-plugin": "^3.0.2",
     "sequelize": "^4.13.3"
   },
